# hoomd-tf

./: .gitattributes  .gitignore  .pep8speaks.yml  .readthedocs.yml  CHANGELOG.rst  CMakeLists.txt  DEVELOPERS  Dockerfile  FindHOOMD.cmake  LICENSE  README.md  Release.md  changelog.rst  environment.yml  paper.bib  paper.md  pytest-benchmark.ini  pytest.ini  readthedocs.yml  requirements.txt
.github/workflows/: test.yml
examples/: 01. Quickstart.ipynb  02. Coarse-Graining.ipynb  02. Preparing Coarse-grained Mapped Simulation.ipynb  02. Tensorflow Intro.ipynb  03. Coarse-Graining.ipynb  03. Experiment Directed Simulations.ipynb  04. Experiment Directed Simulations.ipynb  04. Multidimensional EDS.ipynb  04. Particle Simulations.ipynb  05. Multidimensional EDS.ipynb  05. Particle Simulations.ipynb  05. Running From Trajectory.ipynb  06. Force Matching.ipynb  06. Particle Simulations.ipynb  06. Running From Trajectory.ipynb  07.  Molecules CG Mapping.ipynb  07. Force Matching.ipynb  07. Molecules CG Mapping.ipynb  07. Running From Trajectory.ipynb  08.  Molecules CG Mapping.ipynb  08. Force Matching.ipynb  08. N-Body Neural Force Fields.ipynb  09. Computing CG Properties.ipynb  10. Mapping Gromacs trajectories.ipynb  11. CG simulations using IBI method.ipynb  11. Using External Models.ipynb  EDS_multidim_tutorial.ipynb  EDS_tutorial.ipynb  Relative Entropy Matching.ipynb  cg_tutorial.ipynb  eds_traj.dcd  ex9_segA.trr  skewed_box.ipynb  test_skewed.ipynb  test_topol.gsd  test_traj.trr  testtraj_mapped.gsd
htf/: CMakeLists.txt  CommStruct.cc  CommStruct.h  TFArrayComm.cc  TFArrayComm.cu  TFArrayComm.cuh  TFArrayComm.h  TaskLock.cc  TensorflowCompute.cc  TensorflowCompute.cu  TensorflowCompute.cuh  TensorflowCompute.h  __init__.py  check_tf_version.py  graphbuilder.py  layers.py  module.cc  report.txt  run.py  simmodel.py  tensorflowcompute.py  tfarraycomm.py  tfcompute.py  tfmanager.py  utils.py
htf/benchmarking/: benchmark.py
htf/hoomd2tf/: CMakeLists.txt  hoomd2tf.cc
htf/hoomd2tf_op/: CMakeLists.txt  hoomd2tf.cc  hoomd2tf.cu  hoomd2tf.h
htf/models/benchmarking/: benchmark_xla.py
htf/models/example-models/ann-learned/: build_and_run.py  build_models.py  plot_learned_potential.py  run_inference.py  run_train.py
htf/models/example-models/eds/: build.py  run.py
htf/models/example-models/scattering/: build_scattering.py  run_scattering.py
htf/models/example-models/traj-parse/: traj_parser.py
htf/test-cc/: CMakeLists.txt  test_commstruct.cc
htf/test-py/: .test_traj.trr_offsets.npz  CMakeLists.txt  _test_gpu_sanity.py  benchmark.py  build_examples.py  meth.gsd  pytest.ini  test_benchmark.py  test_cgmap.json  test_layers.py  test_mpi_tensorflow.py  test_onnx.py  test_sanity.py  test_tensorflow.py  test_traj.trr  test_utils.py  tmpFileTracker.py
htf/test-py/CG_mapping/: test_nvt_prod.tpr  test_traj.trr
htf/tf2hoomd/: CMakeLists.txt  tf2hoomd.cc  tf2hoomd.cu
htf/tf2hoomd_op/: CMakeLists.txt  tf2hoomd.cc  tf2hoomd.cu  tf2hoomd.h
sphinx-docs/: Makefile  docs_requirements.txt
tensorflow_plugin/: CMakeLists.txt  CommStruct.cc  CommStruct.h  Dockerfile  IPCArrayComm.cc  IPCArrayComm.h  IPCStruct.h  IPCTaskLock.cc  IPCTaskLock.h  TFArrayComm.cc  TFArrayComm.h  TaskLock.cc  TaskLock.h  TensorflowCompute.cc  TensorflowCompute.cu  TensorflowCompute.cuh  TensorflowCompute.h  TensorflowUpdater.cc  TensorflowUpdater.cuh  TensorflowUpdater.h  __init__.py  check_tf_version.py  graphbuilder.py  ipcarraycomm.py  module.cc  notes.txt  tfarraycomm.py  tfcompute.py  tfmanager.py  update.py  utils.py
tensorflow_plugin/benchmarks/: run_tf_lj.py  run_tf_nlist.py  run_tf_nonlist.py
tensorflow_plugin/build-tools/: install-ubuntu.sh
tensorflow_plugin/hoomd-op/: CMakeLists.txt  hoomd.cc  hoomd.cu  hoomd.h  hoomd_op.cc  zero_out.cc
tensorflow_plugin/hoomd2tf/: CMakeLists.txt  hoomd2tf.cc  hoomd2tf.cu  hoomd2tf.h
tensorflow_plugin/ipc2tensor/: CMakeLists.txt  compilelog  ipc2tensor.cc  ipc2tensor.cu  ipc2tensor.h
tensorflow_plugin/ipcarraycomm/: CMakeLists.txt  IPCArrayComm.cc  IPCArrayComm.cu  IPCArrayComm.h  ipcarraycomm.py
tensorflow_plugin/models/benchmarking/: benchmark_xla.py
tensorflow_plugin/models/example-models/ann-learned/: build_models.py  plot_learned_potential.py  run_inference.py  run_train.py
tensorflow_plugin/models/example-models/eds/: build.py  build_eds.py  real_build.py  real_build_new.py  real_run.py  real_run_new.py  run.py  run_eds.py
tensorflow_plugin/models/example-models/linear-learned/: build_models.py  run_inference.py  run_train.py
tensorflow_plugin/models/example-models/scattering/: build_scattering.py  run_scattering.py
tensorflow_plugin/models/test-model/: build.py
tensorflow_plugin/models/test-models/: basic_ann_ff.py  build.py  run_lj.py
tensorflow_plugin/tensor2ipc/: CMakeLists.txt  tensor2ipc.cc  tensor2ipc.cu  tensor2ipc.h
tensorflow_plugin/test-cases/: CMakeLists.txt  README
tensorflow_plugin/test-cases/ann-ff/: basic_ann_ff_run.py  basic_ann_ff_train.py  plot_learned_potential.py
tensorflow_plugin/test-cases/class-templates/: class  class.cc  class.h
tensorflow_plugin/test-cases/hoomd-tf-gpu/: hoomdtfgpu.py
tensorflow_plugin/test-cases/ipccomm/: CMakeLists.txt  ipccomm_test.cc
tensorflow_plugin/test-cases/memcpy/: CMakeLists.txt  memcpy_test.cc
tensorflow_plugin/test-cases/pybind/: CMakeLists.txt  ClassMethod.cc  ClassMethod.h  class_method.py
tensorflow_plugin/test-cases/spinlock/: CMakeLists.txt  spinlock.cc  spinlock.py
tensorflow_plugin/test-cases/tf-graph-surgery/: CMakeLists.txt  IpcTester.cc  IpcTester.h  graph.pb  ipc_tester.py  load_graph.py  make_graph.py
tensorflow_plugin/test-cases/tf-graph-surgery/model/: test.data-00000-of-00001  test.index
tensorflow_plugin/test-cases/tf-restore/: tf_restore.py
tensorflow_plugin/test-cc/: CMakeLists.txt  test_commstruct.cc
tensorflow_plugin/test-py/: CMakeLists.txt  build_examples.py  test_mpi_tensorflow.py  test_tensorflow.py  test_tf_plugins.py  test_utils.py
tensorflow_plugin/tf2hoomd/: CMakeLists.txt  tf2hoomd.cc  tf2hoomd.cu  tf2hoomd.h
(+81 files in other folders)
